<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/pearls_icon"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/pearls_no_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/business_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/pearls"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pearls_icon" />

        <View
            android:id="@+id/patternview"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/pattern3"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_name_tv"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:id="@+id/relativeL"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorSecondaryText"
            app:layout_constraintBottom_toTopOf="@+id/clothes_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patternview"
            app:layout_constraintVertical_bias="0.254">

            <TextView
                android:id="@+id/byline_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="8dp"
                android:text="@string/details1"
                android:textColor="@color/text_icons"
                android:textSize="16sp"
                android:textStyle="italic" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorHeader"
            app:layout_constraintBottom_toTopOf="@+id/clothes_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeL" />


        <LinearLayout
            android:id="@+id/clothes_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patternview">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc1"
                android:scaleType="centerCrop"
                android:src="@drawable/pearls" />


            <ImageView
                android:id="@+id/chiffon_outfit"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc2"
                android:scaleType="centerCrop"
                android:src="@drawable/pearls3" />


            <ImageView
                android:id="@+id/floral_dress"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc3"
                android:scaleType="centerCrop"
                android:src="@drawable/pearls5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorHeader"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout1"
            app:layout_constraintEnd_toEndOf="@+id/clothes_linearLayout"
            app:layout_constraintStart_toStartOf="@+id/clothes_linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/clothes_linearLayout" />


        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="368dp"
            android:background="@color/colorSecondaryText"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/byline_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/details2"
                android:textColor="@color/text_icons"
                android:textSize="16sp"
                android:textStyle="italic" />

        </RelativeLayout>


        <View
            android:id="@+id/bottom_divider_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
            app:layout_constraintVertical_bias="0.049" />

        <RelativeLayout
            android:id="@+id/contact_us_relativeLayout"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:background="@drawable/pattern3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_divider_view"
            app:layout_constraintVertical_bias="0.115">

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/contact"
                android:textColor="@color/text_icons"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/contacts_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_us_relativeLayout"
            app:layout_constraintVertical_bias="0.16">

            <!--Phone-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/text_icons"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:autoLink="phone"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimaryText" />


            </LinearLayout>

            <!--Site-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/text_icons"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:src="@drawable/web1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/site"
                    android:textColor="@color/colorPrimaryText" />


            </LinearLayout>
            <!--Location-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/text_icons"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="map"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimaryText" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/pattern3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>